2010-11-26  John W. Eaton  <jwe@octave.org>

	* defaults.cc (FEXEC_PATH): Only call set_exec_path if nargin is
	greater than zero.

2010-11-25  Kai Habel  <kai.habel@gmx.de>

	* DLD-FUNCTIONS/fltk_backend.cc (fltk_gui_mode): New
	function to set GUI mode.
	(__fltk_uigetfile__): Remove nargout from argument list.
	(plot_window): Remove gui_mode enum here.

2010-11-25  John W. Eaton  <jwe@octave.org>

	* defaults.cc (set_exec_path): Append EXEC_PATH to PATH.  Store
	only extra directories in EXEC_PATH.
	(FEXEC_PATH): Update doc string.
	Bug #31695.

2010-11-22  John W. Eaton  <jwe@octave.org>

	* defun.cc (defun_isargout): Cast nout to octave_idx_type in call
	to std::min.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* DLD-FUNCTIONS/fltk-backend.cc (__fltk_uigetfile__): New function
	for GUI file dialogs.
	* graphics.cc (property_list::set): Indentation	fix.

2010-11-20  Ben Abbott  <bpabbott@mac.com>

	* graphics.h.in: Change intended for 11272.

2010-11-19  John W. Eaton  <jwe@octave.org>

	Bug #31706.

	* mex.h, mex.cc (mxArray::dup): Rename from clone.  Change all
	uses and derived classes.
	(mxArray_octave_value::dup): Convert to mxArray object here.

2010-11-19  John W. Eaton  <jwe@octave.org>

	Bug #31707.

	* mex.cc (mex::free): Don't warn about skipping memory not
	allocated by mxMalloc, mxCalloc, or mxRealloc.

2010-11-18  Daisuke TAKAGO  <takago@neptune.kanazawa-it.ac.jp>

	* gl-render.cc (opengl_renderer::draw_line):
	Layer markers in 2D plots.

2010-11-18  John W. Eaton  <jwe@octave.org>

	Bug # 31689.

	* ov-str-mat.cc (octave_char_matrix_str::save_ascii):
	Adapt to change in charMatrix::row_as_string function.
	* DLD-FUNCTIONS/md5sum.cc: New tests.

2010-11-17  John W. Eaton  <jwe@octave.org>

	* pt-fcn-handle.cc (tree_anon_fcn_handle::rvalue1): Also stash
	the directory name of the parent function in the newly created
	anonymous function.  Bug #31484.

2010-11-17  John W. Eaton  <jwe@octave.org>
